--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -6,10 +6,13 @@
     android:padding="10dp"
     android:orientation="horizontal">
 
-    <ImageView
+    <com.android.volley.toolbox.NetworkImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/iv_listItem"
-        android:layout_width="100dp"
-        android:layout_height="100dp" />
+        android:scaleType="centerInside"
+        android:adjustViewBounds="true"
+        />
 
     <TextView
         android:layout_width="wrap_content"
